# itmo

discrete math/: hw4.docx  hw5.docx  hw6.docx  hw7.docx  ~$hw6.docx
discrete math/курсовая/: k95.tex
informatics/1_semestr/annotations/: Аннотация №1 Разыграев К. С. P3115.doc  Аннотация №3 Разыграев К. С. P3115.doc  Аннотация №4 Разыграев К. С. P3115.doc  Аннотация №5 Разыграев К. С. P3115.doc
informatics/1_semestr/labs/lab1/: lab1.py  отчёт.docx
informatics/1_semestr/labs/lab2/: lab2.py  отчёт.docx
informatics/1_semestr/labs/lab3/: emoji.py  lab3.7z  task_1.py  task_2.py  task_3.py  task_4.py
informatics/1_semestr/labs/lab3/report/: report.tex  title.tex
informatics/1_semestr/labs/lab4/: pyproject.toml  schedule.csv  schedule.xml  schedule_1.json  schedule_3.json  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
informatics/1_semestr/labs/lab4/report/: README.md  report.tex  title.tex
informatics/1_semestr/labs/lab5/: pyproject.toml  task_1.xlsx  task_2.csv  task_2.xlsx  task_3.py
informatics/1_semestr/labs/lab6/dop/: dop.tex  mendeleev.json
informatics/1_semestr/labs/lab6/main/: article.tex  flower.tex  main.aux  main.tex  title.tex
opd/labs/lab0/: cleanup.sh  task_1_2.sh  task_3.sh  task_5.sh
opd/labs/lab0/report/: .gitignore  report.tex  report.toc  title.tex
opd/labs/lab2/: ~$отчёт.docx  ~WRL0005.tmp  отчёт.docx
proga/1_semestr/labs/lab1/: .gitignore  Отчёт.docx
proga/1_semestr/labs/lab2_pockemons/: .gitignore  build.gradle  settings.gradle
proga/1_semestr/labs/lab3/: build.gradle.kts
(+141 files in other folders)
